--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
 
 @font-face {
   font-family: Lato;
-  src: url(../res/fonts/lato/lato.woff2);
+  src: url(../res/fonts/lato/Lato.woff2);
 }
 
 @font-face {
