--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,11 @@
 @font-face {
+  font-family: English;
+  src: url(../res/fonts/english/English.ttf);
+  src: url(../res/fonts/english/English.woff);
+  src: url(../res/fonts/english/English.woff2);
+}
+
+@font-face {
   font-family: Barkelia;
   src: url(../res/fonts/barkelia/Barkelia.ttf);
 }
@@ -12,18 +19,6 @@
 @font-face {
   font-family: Lato;
   src: url(../res/fonts/lato/Lato.woff2);
-}
-
-@font-face {
-  font-family: Grotesque;
-  src: url(../res/fonts/grotesque/Grotesque.otf);
-}
-
-@font-face {
-  font-family: English;
-  src: url(../res/fonts/english/English.ttf);
-  src: url(../res/fonts/english/English.woff);
-  src: url(../res/fonts/english/English.woff2);
 }
 
 ::-webkit-scrollbar {
@@ -150,7 +145,7 @@ div.textHolder > p {
 .bg1 {
   min-height: 100%;
   width: 100%;
-  background-image: url(../res/img/bg/ballet_1.jpg);
+  background-image: url(../res/img/bg/ballet_1.webp);
 
   min-height: 170%;
   justify-content: space-around;  
@@ -159,7 +154,7 @@ div.textHolder > p {
   min-height: 100%;
   width: 100%;
   margin: 0 auto;
-  background-image: url(../res/img/bg/polunin_2.jpg);
+  background-image: url(../res/img/bg/polunin_2.webp);
   background-position: top;
 }
 
@@ -224,7 +219,7 @@ table.schedule th.teacher {
   text-align: center;
   font-family: Lato;
   font-size: 2em;
-  background-color: hsl(0deg 100% 88%); /* pink */
+  background-color: pink;
   color: white;
   text-shadow: 0 0 10px #9e4d5c;
 }
@@ -234,20 +229,16 @@ table.schedule th.day {
   padding-top: 15px;
   font-weight: bold;
   font-size: 1.1em;
- 
 }
 table.schedule th.day > * {
-  //text-decoration: underline;
 }
 
 table.schedule td.time {
-
 }
 table.schedule td.studio {
   cursor: pointer;
 }
 table.schedule td.level {
-
 }
 table.schedule td.cost {
 
